[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polium"
version = "0.1.0"
description = "Polars to Folium mapping made simple - create beautiful interactive maps with offline support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Polium Contributors"}
]
keywords = ["polars", "folium", "maps", "visualization", "gis", "ais", "leaflet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "folium>=0.20.0",
    "polars>=1.0.0",
    "branca>=0.8.0",
]

[project.optional-dependencies]
# Full feature set with all optional dependencies
full = [
    "h3>=4.0.0,<5.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.0.0",
]
# Individual optional features
h3 = ["h3>=4.0.0,<5.0.0"]
geo = ["shapely>=2.0.0", "pyproj>=3.0.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/HarryRudolph/polium"
Repository = "https://github.com/HarryRudolph/polium"
Issues = "https://github.com/HarryRudolph/polium/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["polium*"]
exclude = ["examples*", "tests*"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py38"
